fix(docs): Add spacing for headings

--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -1,4 +1,5 @@
-.text-large.text-large.text-large {
+.text-large.text-large.text-large,
+.text-large.text-large.text-large p {
   font-size: 1.64rem;
   line-height: 1.14286;
   font-weight: 400;
@@ -27,6 +28,11 @@
   font-size: 17px;
   line-height: 25px;
   letter-spacing: -0.374px;
+}
+
+.sbdocs.sbdocs-content
+  :where(h2:not(.sb-anchor, .sb-unstyled, .sb-unstyled h2)):first-of-type {
+  margin: 20px 0 8px;
 }
 
 .docs-story > div {
